--- a/app-canada/src/app.css
+++ b/app-canada/src/app.css
@@ -38,7 +38,7 @@ b {
 }
 
 a {
-    color: #f47421;
+    color: #b45ad8;
 }
 
 a:hover {
@@ -339,5 +339,21 @@ code {
     border: none;
     background: none;
     cursor: pointer;
+}
+
+.loading-spinner {
+    width: 40px;
+    height: 40px;
+    border: 6px solid rgba(0, 0, 0, 0.1);
+    border-top: 6px solid #b45ad8;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    margin: 20px auto;
+}
+
+/* Spin animation */
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
